rewrote all controllers and services layers to use DTO and rePackged the dto folder